tests/0052-function-local-mutual-recursion.src
let is_even = fun (n) {
    if (n == 0) {
        return true;
    }

    return is_odd (n-1);
};

let is_odd = fun (n) {
    if (n == 0) {
        return false;
    }

    return is_even (n - 1);
};

is_even (4);